chore: fix overflow issue

--- a/src/app/components/StockChart/StockChart.module.scss
+++ b/src/app/components/StockChart/StockChart.module.scss
@@ -6,20 +6,19 @@
 }
 
 .main {
-    width: 100%;
     height: 100%;
-    padding: 1rem;
     display: flex;
     flex-direction: column;
+    min-height: 0;
+    overflow: hidden;
 
     .rangeSelector {
+        padding: 1rem;
         flex-shrink: 0;
-        padding-bottom: 1rem;
     }
 
     .responsiveContainer {
         flex: 1;
-        width: 100%;
         min-height: 0;
     }
 }
